# skyseg-ncnn

./: CMakeLists.txt  LICENSE  README.md  skyseg-ncnn.cpp  skyseg-ncnn.cpp.in
